--- a/103/FinalProject/main.ipynb
+++ b/103/FinalProject/main.ipynb
@@ -860,7 +860,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fe_df.to_csv(\"models/cleaned.csv\")"
+    "fe_df.to_csv(\"static/cleaned.csv\")"
    ]
   },
   {
@@ -939,28 +939,6 @@
     "# add the traget column to the processed dataset. \n",
     "processed_data_df['firstyearpersistence'] = df['firstyearpersistence'].values\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['dataset_transformer.pkl']"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import joblib\n",
-    "\n",
-    "joblib.dump(full_pipeline, 'dataset_transformer.pkl')\n"
    ]
   },
   {
