--- a/103/pandas_rough.ipynb
+++ b/103/pandas_rough.ipynb
@@ -436,10 +436,102 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.DataFrame(\n",
+    "    {\n",
+    "        \"Fruit\": [\"Apples\", \"Oranges\", \"Bananas\", \"Apples\", \"Oranges\", \"Bananas\"],\n",
+    "        \"Amount\": [4, 1, 2, 2, 4, 5],\n",
+    "        \"City\": [\"SF\", \"SF\", \"SF\", \"Montreal\", \"Montreal\", \"Montreal\"],\n",
+    "        \"Season\": [\n",
+    "            \"Summer\",\n",
+    "            \"Winter\",\n",
+    "            \"Summer\",\n",
+    "            \"Winter\",\n",
+    "            \"Summer\",\n",
+    "            \"Winter\",\n",
+    "        ],  # New column\n",
+    "    }\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fruit</th>\n",
+       "      <th>Amount</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Season</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Apples</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Montreal</td>\n",
+       "      <td>Winter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Bananas</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Montreal</td>\n",
+       "      <td>Winter</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Fruit  Amount      City  Season\n",
+       "3   Apples       2  Montreal  Winter\n",
+       "5  Bananas       5  Montreal  Winter"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[(df.City == \"Montreal\")&(df.Season == \"Winter\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.loc[df.]"
+   ]
   }
  ],
  "metadata": {
@@ -458,7 +550,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
